# quizlearnapp

./: .env.example  .eslintrc.json  .gitignore  .windsurfrules  Dockerfile  PROJECT_PLAN.md  Pipfile  README.md  build.sh  components.xml  conftest.py  db  fly.toml  fly_push_env.sh  package-lock.json  package.json  pyproject.toml  pytest.ini  quizlearnapp.code-workspace  tailwind.config.js  test.sh  tsconfig.app.json  tsconfig.json  vite.config.ts
__architecture__/: README.md  ai_chat_architecture.md  app_typescript_components.xml  benchmark_scenarios_example.json  database_schema.xml  frontend_chat_architecture.md  project.xml  project_architecture.xml  project_plan.md  project_status.md  topic_lesson_chat_history_sample.json  topic_lesson_chat_history_schema.json
backend/: .env.test  .eslintrc.json  README.md  jest.config.js  main.py  package.json  requirements-test.txt  tsconfig.json
backend/ai/: config.py  main.py  test_lesson_evaluator.py  test_lesson_plan_creator.py  test_lesson_teacher.py
backend/scripts/: delete_user.py  setup-test-db.ts
backend/src/: app.ts  (+2 more)
frontend/: .env.example  .eslintrc.json  index.html  jest.config.js  package.json  tailwind.config.js  tsconfig.json
prisma/: package-lock.json  package.json  schema.prisma  seed.ts
scripts/: __init__.py  backend_test.sh  db_backup.sh  db_migrate.sh  db_restore.sh  fly_deploy.sh  fly_logs.sh  fly_push_env.sh  populate_test_topics.ts  setenv.sh  start-backend.sh  start-frontend.sh  start_db.sh  test_auth.py
shared/: .eslintrc.json  jest.config.js  package.json
src/: App.tsx  index.css  main.tsx
(+328 files in other folders)
